--- a/etc/bash/rc/history
+++ b/etc/bash/rc/history
@@ -8,6 +8,6 @@ export  HISTFILESIZE=10000
 export      HISTFILE="${HOME}/etc/bash/saved_history"
 
 alias    h='history 20'
-alias   hg='history | grep'
+# alias   hg='history | grep'
 
 shopt -s histappend
