--- a/etc/bash/rc/history
+++ b/etc/bash/rc/history
@@ -7,7 +7,14 @@ export   HISTCONTROL=erasedups
 export  HISTFILESIZE=10000
 export      HISTFILE="${HOME}/etc/bash/saved_history"
 
-alias    h='history 20'
-# alias   hg='history | grep'
-
 shopt -s histappend
+
+LAST_HISTORY_WRITE=$SECONDS
+function prompt_command {
+    if [ $(($SECONDS - $LAST_HISTORY_WRITE)) -gt 60 ]; then
+        history -a
+        LAST_HISTORY_WRITE=$SECONDS
+    fi
+}
+
+PROMPT_COMMAND="$PROMPT_COMMAND; prompt_command"
