Correctly append to PROMPT_COMMAND
It turns out that unconditionally including `; ` at the start of
PROMPT_COMMAND breaks when there's no prior value for that (notably,
when SSHing to a Mac), so we should only include that when there's an
existing value.

--- a/etc/bash/rc/history
+++ b/etc/bash/rc/history
@@ -17,4 +17,4 @@ function prompt_command {
     fi
 }
 
-PROMPT_COMMAND="$PROMPT_COMMAND; prompt_command"
+PROMPT_COMMAND="${PROMPT_COMMAND:+$PROMPT_COMMAND; }prompt_command"
